--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-red-contrib-slack",
+  "name": "node-red-contrib-slack-files",
   "version": "0.1.2",
   "description": "A node-red module to post to Slack.com",
   "main": "slackpost.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/yayadrian/node-red-slack.git"
+    "url": "git://github.com/thomaspurchas/node-red-slack.git"
   },
   "keywords": [
     "node-red",
